--- a/pop-zgy/pom.xml
+++ b/pop-zgy/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>pop-common</artifactId>
             <version>0.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.11</version>
+        </dependency>
     </dependencies>
 
     <build>
