--- a/pop-gxb/pom.xml
+++ b/pop-gxb/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1</version>
     <name>pop-gxb</name>
     <description>学博</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
